payments and devises views partly implemented

--- a/apps/templates/accounts/users.html
+++ b/apps/templates/accounts/users.html
@@ -69,7 +69,7 @@
                 <table class="table align-items-center table-flush">
                   <thead class="thead-light">
                     <tr>
-                      <th scope="col" class="sort" data-sort="row">N°</th>
+                      <th scope="col" class="sort" data-sort="n°">N°</th>
                       <th scope="col" class="sort" data-sort="email">Email</th>
                       <th scope="col" class="sort" data-sort="prenoms&nom">Prénoms & Nom</th>
                       <th scope="col" class="sort" data-sort="phone">Téléphone</th>
@@ -83,7 +83,7 @@
                         <td class="n°">
                           {{forloop.counter}}
                         </td>
-                        <th scope="row">
+                        <th scope="email">
                           <div class="media align-items-center">
                             <!-- <a href="#" class="avatar rounded-circle mr-3">
                               <img alt="Image placeholder" src="/static/assets/img/theme/bootstrap.jpg">
