--- a/apps/templates/accounts/profiles.html
+++ b/apps/templates/accounts/profiles.html
@@ -123,7 +123,7 @@
                             </div>
                           </div>
                         </th>
-                        <td class="nom">
+                        <td class="n°">
                           {{profile.type}}
                         </td>
                         <td>
