--- a/apps/templates/includes/sidebar-inner.html
+++ b/apps/templates/includes/sidebar-inner.html
@@ -38,9 +38,15 @@
                 <div class="collapse" id="navbar-paiements">
                     <ul class="nav nav-sm flex-column">
                         <li class="nav-item">
-                            <a href="/" class="nav-link">
+                            <a href="{% url 'paiement:payments' %}" class="nav-link">
                             <span class="sidenav-mini-icon"> L </span>
                             <span class="sidenav-normal"> Liste </span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{% url 'paiement:devises' %}" class="nav-link">
+                            <span class="sidenav-mini-icon"> D </span>
+                            <span class="sidenav-normal"> Dévises </span>
                             </a>
                         </li>
                         <li class="nav-item">
