Add payment button implemented

--- a/apps/templates/paiements/payments.html
+++ b/apps/templates/paiements/payments.html
@@ -63,7 +63,7 @@
               <!-- Card header -->
               <div class="card-header border-0">
                 <h3 class="mb-0"><em>Liste des paiements</em>
-                  <a href="#" class="btn btn-sm btn-neutral float-right">+ Ajouter</a>
+                  <a href="{% url 'paiement:add_payment' %}" class="btn btn-sm btn-neutral float-right">+ Ajouter</a>
                 </h3>
               </div>
               <!-- Light table -->
