--- a/apps/templates/accounts/edit-agency.html
+++ b/apps/templates/accounts/edit-agency.html
@@ -127,7 +127,7 @@
                       </fieldset>
                       <div class="card-footer">
                         <div class="row justify-content-center">
-                            <input type="button" class="btn btn-secondary" value="Annuler">
+                            <input type="button" onclick="location.href='/agencies/'" class="btn btn-secondary" value="Annuler">
                             <input type="submit" class="btn btn-primary" value="Enregistrer">
                         </div>
                       </div>
