QR code implemented and added to pdf receipt

--- a/apps/templates/includes/sidebar-inner.html
+++ b/apps/templates/includes/sidebar-inner.html
@@ -30,7 +30,7 @@
                 </a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link {% if 'paiements-' in segment %} active {% endif %}" 
+                <a class="nav-link {% if 'paiements' in segment %} active {% endif %}" 
                    href="#navbar-paiements" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="navbar-paiements">
                     <i class="ni ni-ungroup text-orange"></i>
                     <span class="nav-link-text">Paiements</span>
