--- a/apps/templates/includes/sidebar-inner.html
+++ b/apps/templates/includes/sidebar-inner.html
@@ -59,7 +59,7 @@
                 </div>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link {% if 'facturation-' in segment %} active {% endif %}" 
+                <a class="nav-link {% if 'facturation' in segment %} active {% endif %}" 
                    href="#navbar-facturation" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="navbar-facturation">
                     <i class="ni ni-ui-04 text-info"></i>
                     <span class="nav-link-text">Facturation</span>
@@ -67,7 +67,7 @@
                 <div class="collapse" id="navbar-facturation">
                     <ul class="nav nav-sm flex-column">
                         <li class="nav-item">
-                            <a href="/" class="nav-link">
+                            <a href="{% url 'paiement:factures' %}" class="nav-link">
                             <span class="sidenav-mini-icon"> L </span>
                             <span class="sidenav-normal"> Liste </span>
                             </a>
